<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_main"
        android:enabled="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_action_statistics"
        android:title="@string/statistics"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/logout2"
        app:showAsAction="ifRoom" />
</menu>