<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/loginImageViewLogo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/tongue_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/loginEditTextEmail"
        style="@style/editTextStyle"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/loginImageViewLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginImageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/loginImageViewLogo" />

    <EditText
        android:id="@+id/loginEditTextPassword"
        style="@style/editTextStyle"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginEditTextEmail"
        app:layout_constraintStart_toStartOf="@+id/loginEditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextEmail" />

    <Button
        android:id="@+id/loginButton"
        style="@style/buttonStyle"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPassword" />

    <Button
        android:id="@+id/loginButtonWithFacebook"
        style="@style/buttonStyle"
        android:layout_marginTop="16dp"
        android:text="@string/log_in_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />



    <TextView
        android:id="@+id/loginTextViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_up"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>